Fix Issue #521 Changing annotation font/color in Options/Theme have no impact